crates/fec-cli/src/commands/snapshots/libfec__commands__dates__tests__state_filter_tx_snapshot.snap
---
source: crates/fec-cli/src/commands/dates.rs
expression: filtered
snapshot_kind: text
---
- category: Election Dates
  location: Texas
  start_date: 2026-01-31
  summary: TX/18 Special General Election Runoff
- category: Monthly
  location: FEC
  start_date: 2026-02-20
  summary: February Monthly Report Due
- category: Quarterly
  location: FEC
  start_date: 2026-04-15
  summary: April Quarterly Report Due
- category: EC Periods
  location: TX
  start_date: 2026-02-01
  summary: EC Period Starts
