crates/fec-cli/src/commands/snapshots/libfec__commands__dates__tests__tui_mixed_grouped_and_ungrouped.snap
---
source: crates/fec-cli/src/commands/dates.rs
expression: terminal.backend()
snapshot_kind: text
---
"┌FEC Calendar Dates────────────────────────────────────────────────────────────────────────────────┐"
"│FEC Calendar  Elections, Deadlines (4 events)                                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"           January 2026         February 2026           March 2026            April 2026            "
"       Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa  Su Mo Tu We Th Fr Sa       "
"                    1  2  3   1  2  3  4  5  6  7   1  2  3  4  5  6  7            1  2  3  4       "
"        4  5  6  7  8  9 10   8  9 10 11 12 13 14   8  9 10 11 12 13 14   5  6  7  8  9 10 11       "
"       11 12 13 14 15 16 17  15 16 17 18 19 20 21  15 16 17 18 19 20 21  12 13 14 15 16 17 18       "
"       18 19 20 21 22 23 24  22 23 24 25 26 27 28  22 23 24 25 26 27 28  19 20 21 22 23 24 25       "
"       25 26 27 28 29 30 31                        29 30 31              26 27 28 29 30             "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                     ■ Today  ■ Deadline  ■ Election"
"┌Upcoming Events (4)───────────────────────────────────────────────────────────────────────────────┐"
"│   Date             Category                 Description                                          │"
"│>> 2026-02-20       Monthly                  Monthly Report Due                                   │"
"│   2026-03-03       Election Dates           Primary Elections in AR, NC, and TX                  │"
"│   2026-04-15       Quarterly                Quarterly Report Due                                 │"
"│   2026-11-03       Election Dates           CA General Election                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Event Details─────────────────────────────────────────────────────────────────────────────────────┐"
"│Summary: Monthly Report Due                                                                       │"
"│Details: Description for Monthly Report Due                                                       │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"                  q quit  ↑↓/jk select  ←→/hl month  gg/G first/last  o open  O API                 "
